--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -18,6 +18,7 @@
     bool nosql = Model.NOSQL != null;
     bool odat = Model.ODAT != null;
     bool dnsEnum = Model.DNSENUM != null;
+    bool openvas = Model.OPENVAS != null;
 }
 
 
@@ -296,6 +297,63 @@
                         
         
     }
+     @* -----OPENVAS----- *@
+    else if (openvas)
+    {
+         <h2><em>Modifica modulo</em><strong> @(Model.OPENVAS.Nome)</strong></h2>
+        <hr />
+   
+   <form asp-action="Create" name="nessusForm">
+                            <input type="hidden" asp-for="@Model.OPENVAS.Applicazione" value="@webmva.Models.APPLICAZIONE.OPENVAS" />
+                              <input type="hidden" asp-for="@Model.NESSUS.ID" />
+                              <div class="row panel panel-default panel-body">
+                            <div class="col-sm-12">
+                                  <div class="col-sm-7" style="margin:0 auto; float:none">
+                                    <div class="form-group row">
+                                        <h4 asp-for="@(Model.OPENVAS.Nome)">Nome Modulo</h4>
+                                        <input class="form-control" asp-for="@(Model.OPENVAS.Nome)" />
+                                    </div>
+                                </div>
+                            <div class="col-sm-12">
+                                 <h4>Opzioni</h4><hr />
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.OPENVAS.ServerIP)">Server IP</h4>
+                                                    <input class="form-control" asp-for="@(Model.OPENVAS.ServerIP)" />
+                                                </div>
+
+                                            </div>
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.OPENVAS.Porta)">Porta</h4>
+                                                    <input class="form-control" asp-for="@(Model.OPENVAS.Porta)" />
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                     <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="http://www.openvas.org/src-doc/openvas-scanner/index.html" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di OpenVAS</a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Create" asp-route-cosa="openvas" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                            </div>
+                            </div>
+                        </form>
+}
     @* -----DNSRECON----- *@
     else if (dnsrecon)
     {
@@ -2336,11 +2394,10 @@
         <hr />
 
 
-   <form asp-action="Edit" name="dnsEnumForm">
+     <form asp-action="Edit" name="dnsEnumForm">
                                 <input type="hidden" asp-for="@Model.DNSENUM.Applicazione" value="@webmva.Models.APPLICAZIONE.DNSENUM" />
                                 <input type="hidden" asp-for="@Model.DNSENUM.ID" />
-                                  <div class="row panel panel-default panel-body">
-
+                                <div class="row panel panel-default panel-body">
                                 <div class="col-sm-12">
                                     <div class="col-sm-7" style="margin:0 auto; float:none">
                                         <div class="form-group">
@@ -2349,24 +2406,108 @@
                                         </div>
                                     </div>
                                     <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.DNSENUM.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.DNSENUM.ComandoPersonalizzato)" />
+                                                </div>
+
+                                            </div>
+ <hr/>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Timeout</label>
+                                            </div>
+                                            <input class="col-sm-5" type="number" asp-for="@Model.DNSENUM.TimeoutDNS" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Delay</label>
+                                            </div>
+                                            <input class="col-sm-5" type="number" asp-for="@Model.DNSENUM.DelayDNS" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Page</label>
+                                            </div>
+                                            <input class="col-sm-5" type="number" asp-for="@Model.DNSENUM.PagesDNS" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Scrap</label>
+                                            </div>
+                                            <input class="col-sm-5" type="number" asp-for="@Model.DNSENUM.ScrapDNS" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Thread</label>
+                                            </div>
+                                            <input class="col-sm-5" type="number" asp-for="@Model.DNSENUM.ThreadsDNS" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
                                        <div class="col-sm-12">
+                                            <div class="col-sm-6">
+                                        <div class="form-group row">
+                                                     <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DNSENUM.VerboseDNS" /> Verbose (-v)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                     <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DNSENUM.RecursionDNS" /> Recursion (-r)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                <div class="form-group row">
+                                                     <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DNSENUM.Whois" /> Whois (-w)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                     <div class="col-sm-8">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DNSENUM.NoReverseDNS" /> No Reverse (-noreverse)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                </div>
+                                                </div>
+
+
+                                   <div class="col-sm-12">
                                             <hr/>
                                             <div class="col-sm-5">
                                                 <div clas="form-group row">
-                                                 <a href=""target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                 <a href="https://github.com/fwaeytens/dnsenum"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         consulta il documentazione di DnsEnum </a>
                                         </div>
                                         </div>
                                         <div class="col-sm-1"></div>
                                         <div class="col-sm-6 text-right">
                                             <div class="form-group row">
-                                                <input type="submit" asp-action="Edit" asp-route-id="@Model.DNSENUM.ID"class="btn btn-default" value="Salva" />&nbsp;&nbsp; |
+                                                <input type="submit" asp-action="Edit" asp-route-id="@Model.DNSENUM.ID" class="btn btn-default" value="Salva" />&nbsp;&nbsp; |
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
                                         </div>
                                     </div>
-                                </div>
+                                    </div>
                             </form>
 } 
 
