--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -387,7 +387,7 @@
                                             </thead>
                                         </div>
                                         <tbody>
-                                            @foreach (var item in Model.ModuliNMAP)
+                                            @foreach (var item in Model.ModuliOPENVAS)
     {
                                         <tr>
                                             <td>
@@ -403,22 +403,7 @@
                                             </td>
                                         </tr>
 }
-                                            @foreach (var item in Model.ModuliNESSUS)
-    {
-                                        <tr>
-                                            <td>
-                                                <a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Nome)</a>
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Comando)
-                                            </td>
-
-                                            <td>
-                                                <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
-                                            </td>
-                                        </tr>
-}
+                                           
                                         </tbody>
                                     </table>
         
