--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-2 sidebar">
         <div class="row">
             <!-- uncomment code for absolute positioning tweek see top comment in css -->
-            <div class="absolute-wrapper"> </div>
+           
             <!-- Menu -->
             <div class="side-menu col-6">
                 <nav class="navbar navbar-default" role="navigation">
@@ -49,7 +49,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a   data-toggle="collapse" href="#OpenVAS">
+                                                <a   data-toggle="collapse" href="#Openvas">
                                                     OpenVAS
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -82,6 +82,12 @@
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
+                                             <li>
+                                                <a   data-toggle="collapse" href="#Wascan">
+                                                    Wascan
+                                                    <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -99,7 +105,7 @@
 
                                             <li>
                                                 <a   data-toggle="collapse" href="#Droopescan">
-                                                    Droope
+                                                    Droopescan
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
@@ -137,7 +143,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a   data-toggle="collapse" href="#feirce">
+                                                <a   data-toggle="collapse" href="#fierce">
                                                     Fierce
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -171,7 +177,7 @@
                                                 <a   data-toggle="collapse" href="#Infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
-                                                <a   data-toggle="collapse" href="#Infogae">Sublist3r <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse" href="#Sublist3r">Sublist3r <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -193,8 +199,8 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a   data-toggle="collapse" href="#Nosql">
-                                                    Nosql
+                                                <a   data-toggle="collapse" href="#NoSql">
+                                                    Nosqlmap
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
@@ -253,7 +259,7 @@
                     <div class="panel-heading">
                         <a data-toggle="collapse" href="#Nmap">
                             <strong>
-                                NMAP SCAN
+                                NMAP 
                             </strong>
                             <span class="caret"></span>
                         </a>
@@ -484,7 +490,7 @@
                 </div>
             </div>
 
-
+        <div class="col-5">
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
                     <a   data-toggle="collapse" href="#Nessus">
@@ -512,12 +518,19 @@
                             <div class="col-sm-12">
                                  <h4>Opzioni</h4><hr />
                                         <div class="col-sm-12">
+                                            <div class="col-sm-12">
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
                                                     <h4 asp-for="@(Model.NESSUS.ServerIP)">Server IP</h4>
                                                     <input class="form-control" asp-for="@(Model.NESSUS.ServerIP)" />
                                                 </div>
-
+                                            </div>
+                                            <div class="col-xs-6 col-sm-offset-9 ">
+                                            <div class="form-group">
+                                                <input type="submit" class="btn btn-default" value="Test" />
+                                               
+                                            </div>
+                                        </div>
                                             </div>
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
@@ -555,6 +568,8 @@
                     </div>
                 </div>
             </div>
+            </div>
+            <div class="col-5">
      <div class="panel panel-sidebar">
                 <div class="panel-heading">
                     <a   data-toggle="collapse" href="#Openvas">
@@ -602,6 +617,8 @@
                                      <div class="col-sm-12">
                                             <hr/>
                                             <div class="col-sm-5">
+                                                 <div clas="form-group row"><a href="http://www.openvas.org/" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        sito</a></div>
                                                 <div clas="form-group row">
                                                  <a href="http://www.openvas.org/src-doc/openvas-scanner/index.html" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         consulta il documentazione di OpenVAS</a>
@@ -620,6 +637,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -838,7 +856,9 @@
                                             <hr/>
                                             <div class="col-sm-5">
                                                 <div clas="form-group row">
-                                                 <a href="http://wapiti.sourceforge.net/"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                      <div clas="form-group row"><a href="http://wapiti.sourceforge.net/" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        sito</a></div>
+                                                 <a href="http://wapiti.sourceforge.net/wapiti.1.html"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         consulta il documentazione di Wapiti</a>
                                         </div>
                                         </div>
@@ -954,6 +974,7 @@
                                              <div class="col-sm-1"></div>
                                             <input type="text" class="col-sm-5" asp-for="@Model.OPENDOOR.Metodo" />  
                                         </div>  
+                                        </div>
                                    
                                    <div class="col-sm-12">
                                             <hr/>
@@ -972,7 +993,7 @@
                                         </div>
                                         </div>
                                 </div>
-</div>
+
                             </form>
 
                         </div>
@@ -1120,6 +1141,8 @@
 
                                             </div>
                                             </div>
+                                            </div>
+                                            </div>
 
                                         
                                    
@@ -1139,15 +1162,15 @@
                                             </div>
                                         </div>
                                         </div>
-                                </div>
+                                
 </div>
                             </form>
-</div>
+                          </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+    
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a href="#dns" data-toggle="collapse">
@@ -1514,6 +1537,7 @@
                                             <input class="form-control" asp-for="@(Model.DNSRECON.Nome)" />
                                         </div>
                                     </div>
+                                    
 
                                     <hr />
                                     <div class="col-sm-12">
@@ -1525,6 +1549,7 @@
                                         </div>
                                     </div>
                                     <hr/>
+                                    
                                    
                                     
                                 
@@ -1584,33 +1609,37 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-sm-12">
+                                        </div>
+                                      
+                                       <div class="col-sm-12">
                                             <hr/>
                                             <div class="col-sm-5">
-                                                <div clas="form-group row">
+                                                 <div clas="form-group row">
                                                  <a href="https://github.com/darkoperator/dnsrecon"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                sito</a>
-                                        <div clas="form-group row">
-                                                 <a href=" https://tools.kali.org/information-gathering/dnsrecon"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                        consulta la documentazione di Dnsrecon</a>
+                                        sito</a>
+                                        </div>
+                                                <div clas="form-group row">
+                                                 <a href="https://tools.kali.org/information-gathering/dnsrecon"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di DnsRecon</a>
                                         </div>
                                         </div>
                                         <div class="col-sm-1"></div>
                                         <div class="col-sm-6 text-right">
                                             <div class="form-group row">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="dnsrecon" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                <input type="submit" asp-action="Create" asp-route-cosa="wpscan" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
                                         </div>
-                                    </div>
-                                </div>
-
+                                   </div>
+                                 
                             </form>
-</div>
+                         </div>
                         </div>
                     </div>
-                </div>
+                    </div>
+                    
+            
                  <div class="col-5">
              <div class="panel panel-sidebar">
                 <div class="panel-heading">
@@ -1845,7 +1874,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
         </div>
        
     
@@ -2044,14 +2073,14 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a   data-toggle="collapse" href="#sublist3r">
+                        <a   data-toggle="collapse" href="#Sublist3r">
                             <strong>
                                 SUBLIST3R
                             </strong>
                             <span class="caret"></span>
                         </a>
                     </div>
-                    <div class="collapse col-5" id="sublist3r">
+                    <div class="collapse col-5" id="Sublist3r">
                         <div class="panel-body">
                             <h4>
                                 <strong> Configura modulo </strong>
@@ -2661,14 +2690,14 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a   data-toggle="collapse" href="#noSqlmap">
+                        <a   data-toggle="collapse" href="#NoSql">
                             <strong>
                                 NOSQLMAP
                             </strong>
                             <span class="caret"></span>
                         </a>
                     </div>
-                    <div class="collapse col-5" id="noSqlmap">
+                    <div class="collapse col-5" id="NoSql">
                         <div class="panel-body">
                             <h4>
                                 <strong> Configura modulo </strong>
@@ -3031,16 +3060,14 @@
                                             </div>
                                         <div class="col-sm-12">
                                             <hr/>
-                                             <div class="col-sm-5">
+                                            <div class="col-sm-5">
                                                 <div clas="form-group row">
                                                  <a href="https://en.kali.tools/?p=18..c%27%C3%A8"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         sito</a>
                                         </div>
-                                        </div>
-                                            <div class="col-sm-5">
                                                 <div clas="form-group row">
                                                  <a href="https://github.com/derv82/wifite2"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                        consulta il documentazione di Wifite</a>
+                                        consulta il documentazione di Wifite </a>
                                         </div>
                                         </div>
                                         <div class="col-sm-1"></div>
