--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -9,7 +9,7 @@
           <div class="col-sm-12">
               <div class="col-sm-7" style="margin:5ex; float:none">
                                         <div class="form-group">
-                                            <h4 asp-for="Nome">Nome Modulo</h4><hr/>
+                                            <h4 asp-for="Nome">Nome Progetto</h4><hr/>
                                             <input class="form-control" asp-for="Nome" placeholder="nome" />
                                             <span asp-validation-for="Nome" class="text-danger"></span><br>
                                         </div>
